--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,6 +7,7 @@
     border-radius: 1rem;
     box-shadow: 1rem 1rem black;
     padding-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 .foot-link{
     width: 50%;
